# xDRFPublicCode

./: CMakeLists.txt  README  REQUIREMENTS  install_instructions.txt
MarkRMSRegions/: CMakeLists.txt  MarkRMSRegions.cpp
MarkXDRFRegions/: CMakeLists.txt  MarkXDRFRegions.cpp
MemDepPrinter/: CMakeLists.txt  MemDepPrinter.cpp
PatchRMSFunctions/: CMakeLists.txt  PatchRMSFunctions.cpp
PointerAliasing/: AliasCombiner.cpp  UseChainAliasing.cpp
SVF-master/: Makefile.common  Makefile.llvm.config  config.status  configure
SVF-master/autoconf/: #configure.ac#  configure.ac~
SVF-master/autoconf/autom4te.cache/: output.0  requests  traces.0
SVF-master/lib/CUDD/Release+Asserts/: .dir  cpu_stats.d  cpu_time.d  cuddAPI.d  cuddAddAbs.d  cuddAddApply.d  cuddAddFind.d  cuddAddInv.d  cuddAddIte.d  cuddAddNeg.d  cuddAddWalsh.d  cuddAndAbs.d  (+87 more)
SynchPointDelim/: StepEngine.hpp  SynchPoint.hpp  SynchPointDelim.cpp  SynchPointDelim.hpp  UseChainAliasing.cpp
ThreadDependantAnalysis/: CMakeLists.txt  ThreadDependance.cpp  ThreadDependence.cpp
ThreadDependence/: CMakeLists.txt  ThreadDependence.cpp
VerifyXDRF/: CMakeLists.txt  VerifyXDRF.cpp
XDRFExtension/: CMakeLists.txt  XDRFExtension.cpp
utility/: PatchAllInDir.sh  README_SCRIPTS  SanityCheck.sh  addXDRFMarksAtManual.sh  envSetup.sh  insertLLascii.sh  llvm-env.sh  llvm-env2.sh  llvm_38-env.sh  obtainStaticStats.sh  patchXDRF.sh  pin-env.sh  plotStaticStats.sh  resndrfReplace.sh  resndrfReplaceCall.sh  resndrfReplaceXchg.sh  run-verify.sh  runPass.sh  runPin.sh  runPinChild.sh  runRMSPatch.sh  viewGraph.sh  xdrf-env.sh
(+50 files in other folders)
